--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -39,12 +39,12 @@
 }
 
 @media screen and (min-width: 768px) {
-    .show {""
-        width: calc(var(--nav-width) + 180px);
+    .show {
+        width: calc(var(--nav-width) + 185px);
     }
 
     .body-pd {
-        padding-left: calc(var(--nav-width) + 195px);
+        padding-left: calc(var(--nav-width) + 198px);
     }
 
 }
